--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,15 +1,28 @@
 {
   "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "jsx": "react-jsx",
+    "allowJs": true,
+    "paths": {
+      "@types/*": ["./types/*"]
+    }
   },
   "include": [
-    "vite.config.ts"
+    "vite.config.ts",
+    "src"
   ]
 }
